welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbpas:Int=0
while (!estSurBiscuit){
    avance();nbpas = nbpas + 1;
}
prendBiscuit()

for (nbpas <- 0 to 7) { 
    recule(); nbpas = nbpas - 1;
}
poseBiscuit()
